# flashq

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  bench_latest.txt  rust-toolchain.toml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
benches/: batching_baseline.rs  file_storage.rs  file_storage_io_uring.rs  file_storage_std.rs  memory_storage.rs
crates/flashq/: Cargo.toml
crates/flashq-broker/: Cargo.toml
crates/flashq-broker/src/: broker.rs  client.rs  lib.rs
crates/flashq-broker/tests/: broker_integration_tests.rs  test_utilities.rs
crates/flashq-broker/tests/broker/: admin_tests.rs  consumer_tests.rs  producer_tests.rs  storage_integration_tests.rs  subscribe_tests.rs  validation_tests.rs
crates/flashq-broker/tests/cluster/: cluster_client_integration_tests.rs  cluster_service_integration_tests.rs
crates/flashq-client/: Cargo.toml
crates/flashq-client/src/: lib.rs
crates/flashq-cluster/: Cargo.toml  README.md  build.rs
crates/flashq-cluster/proto/: cluster.proto
crates/flashq-cluster/src/: client.rs  error.rs  lib.rs  server.rs  service.rs  traits.rs  types.rs
crates/flashq-cluster/src/manifest/: loader.rs  mod.rs  types.rs
crates/flashq-cluster/src/metadata_store/: backend.rs  file.rs  memory.rs  mod.rs  trait.rs
crates/flashq-cluster/tests/: cluster_integration_tests.rs  manifest_integration_tests.rs  metadata_store_integration_tests.rs  server_client_integration_tests.rs  service_integration_tests.rs  test_utilities.rs
crates/flashq-cluster/tests/client/: client_integration_tests.rs
crates/flashq-cluster/tests/cluster/: manifest_tests.rs
crates/flashq-cluster/tests/manifest/: manifest_tests.rs
crates/flashq-cluster/tests/metadata_store/: file_metadata_store_tests.rs
crates/flashq-cluster/tests/server/: server_integration_tests.rs
crates/flashq-cluster/tests/service/: file_service_tests.rs
crates/flashq-grpc/: Cargo.toml  build.rs
crates/flashq-grpc/src/: client.rs  lib.rs  server.rs
crates/flashq-grpc/tests/: cluster_integration_tests.rs  grpc_integration_tests.rs  test_utilities.rs
crates/flashq-grpc/tests/cluster/: cluster_client_integration_tests.rs  cluster_service_integration_tests.rs
crates/flashq-grpc/tests/grpc/: admin_tests.rs  consumer_tests.rs  producer_tests.rs  storage_integration_tests.rs  subscribe_tests.rs  test_utilities.rs  validation_tests.rs
crates/flashq-http/: Cargo.toml
crates/flashq-http/src/: lib.rs
crates/flashq-http/src/http/: combined_cli.rs  common.rs  error.rs  metadata.rs  mod.rs
crates/flashq-http/src/http/broker/: consumer.rs  metadata.rs  mod.rs  producer.rs  routes.rs  server.rs
crates/flashq-http/src/http/consumer/: cli.rs  client.rs
crates/flashq-http/src/http/producer/: cli.rs  client.rs
crates/flashq-http/tests/: http_integration_tests.rs
crates/flashq-http/tests/http/: broker_openapi_compliance_tests.rs  broker_tests.rs  client_tests.rs  consumer_group_tests.rs  consumer_polling_tests.rs  health_tests.rs  offset_tests.rs  producer_tests.rs  storage_integration_tests.rs  test_utilities.rs  time_polling_tests.rs
crates/flashq-proto/: Cargo.toml  build.rs
crates/flashq-storage/: Cargo.toml
crates/flashq-storage/benches/: batching_baseline.rs  file_storage.rs
crates/flashq-storage/src/: error.rs  lib.rs
crates/flashq-storage/src/storage/: backend.rs  batching_heuristics.rs  mod.rs  trait.rs
crates/flashq-storage/src/storage/file/: common.rs  consumer_group.rs  file_io.rs  mod.rs  segment.rs
crates/flashq-storage/tests/: storage_integration_tests.rs
crates/flashq-storage/tests/storage/: batching_tests.rs  consumer_group_tests.rs  consumer_offset_store_tests.rs  directory_locking_tests.rs  error_simulation_tests.rs  file_io_integration_tests.rs  file_topic_log_tests.rs  index_tests.rs  mod.rs  partition_backward_compatibility_tests.rs  partition_tests.rs  persistence_tests.rs  segment_manager_tests.rs  segment_tests.rs  storage_backend_tests.rs  test_utilities.rs  time_index_tests.rs  time_polling_tests.rs
crates/flashq/benches/: batching_baseline.rs  file_storage.rs  memory_storage.rs
crates/flashq/src/: demo.rs  error.rs  lib.rs  main.rs  telemetry.rs
crates/flashq/src/storage/: backend.rs  memory.rs  mod.rs  trait.rs
crates/flashq/src/storage/file/: consumer_group.rs  file_io.rs  index.rs  mod.rs  offset_store.rs  segment.rs  segment_manager.rs  time_index.rs  topic_log.rs
crates/flashq/tests/: storage_integration_tests.rs
crates/flashq/tests/storage/: batching_tests.rs  consumer_group_tests.rs  consumer_offset_store_tests.rs  directory_locking_tests.rs  error_simulation_tests.rs  file_io_integration_tests.rs  file_topic_log_tests.rs  index_tests.rs  partition_backward_compatibility_tests.rs  partition_tests.rs  persistence_tests.rs  segment_manager_tests.rs  segment_tests.rs  storage_backend_tests.rs  test_utilities.rs  time_index_tests.rs  time_polling_tests.rs
docs/: api.md  architecture.md  development.md  openapi.yaml  performace.md  performance.md
src/: api.rs  demo.rs  error.rs  lib.rs  main.rs
src/http/: cli.rs  client.rs  combined_cli.rs  common.rs  consumer.rs  error.rs  metadata.rs  mod.rs  producer.rs  server.rs  types.rs  validation.rs
src/storage/: backend.rs  file.rs  memory.rs  mod.rs  trait.rs
tests/: client_functionality_tests.rs  client_tests.rs  consumer_tests.rs  http_integration_tests.rs  integration_tests.rs  polling_tests.rs  producer_tests.rs  server_openapi_compliance_tests.rs  server_tests.rs  storage_integration_tests.rs  test_helpers.rs
tests/http/: broker_openapi_compliance_tests.rs  broker_tests.rs  client_tests.rs  consumer_group_tests.rs  consumer_polling_tests.rs  consumer_tests.rs  file_backend_tests.rs  health_tests.rs  http_test_helpers.rs  offset_tests.rs  producer_tests.rs  server_openapi_compliance_tests.rs  server_tests.rs  storage_integration_tests.rs  test_utilities.rs  time_polling_tests.rs
tests/storage/: async_io_integration_tests.rs  batching_tests.rs  consumer_group_tests.rs  directory_locking_tests.rs  error_simulation_tests.rs  segment_tests.rs  (+9 more)
(+24 files in other folders)
