[package]
name = "flashq"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["http"]
http = []

[dependencies]
axum = "0.8"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
fs4 = "0.13.1"
sysinfo = "0.37.0"
log = "0.4"
env_logger = "0.11"
io-uring = "0.7.10"

[dev-dependencies]
serde_yaml = "0.9"
uuid = { version = "1.18.0", features = ["v4"] }
tempfile = "3.13"
divan = "0.1"

[[bench]]
name = "memory_storage"
harness = false

[[bench]]
name = "file_storage_std"
harness = false

[[bench]]
name = "file_storage_io_uring"
harness = false