[workspace]
members = [
    "crates/flashq",
    "crates/flashq-http",
]
# Build only the core crate by default so `cargo build` remains lean
default-members = ["crates/flashq"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1.0"
fs4 = "0.13.1"
sysinfo = "0.37.0"
log = "0.4"
env_logger = "0.11"
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-log = "0.2"
