[package]
name = "flashq-broker"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "grpc-server"
path = "src/bin/server.rs"

[[bin]]
name = "grpc-client"
path = "src/bin/client.rs"

[dependencies]
flashq = { path = "../flashq" }
flashq-storage = { path = "../flashq-storage" }
flashq-cluster = { path = "../flashq-cluster" }
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
chrono.workspace = true
tower-http.workspace = true
async-trait.workspace = true

[build-dependencies]
tonic-build.workspace = true
protoc-bin-vendored.workspace = true

[dev-dependencies]
uuid.workspace = true
tempfile.workspace = true
tokio.workspace = true
