[package]
name = "flashq-cluster"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
flashq = { path = "../flashq" }
flashq-proto = { path = "../flashq-proto" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tonic.workspace = true
prost.workspace = true
parking_lot.workspace = true
log.workspace = true
tracing.workspace = true
futures-util.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
