[package]
name = "flashq-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "broker"
path = "src/bin/broker.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
flashq = { path = "../flashq" }
axum = "0.8"
tokio = { version = "1.47.1", features = ["full"] }
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4.5", features = ["derive"] }
chrono.workspace = true
log.workspace = true
env_logger.workspace = true
urlencoding = "2.1.3"

[dev-dependencies]
serde_yaml = "0.9"
uuid = { version = "1.18.0", features = ["v4"] }
tempfile = "3.13"
tokio = { version = "1.47.1", features = ["full"] }
