[package]
name = "flashq-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "broker"
path = "src/bin/broker.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
flashq = { path = "../flashq" }
axum = "0.8"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap.workspace = true
chrono.workspace = true
log.workspace = true
tracing.workspace = true
urlencoding = "2.1.3"
tower-http.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
uuid.workspace = true
tempfile.workspace = true
tokio.workspace = true