[package]
name = "flashq"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "flashq"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
dashmap.workspace = true
fs4.workspace = true
sysinfo.workspace = true
log.workspace = true
libc = "0.2"

[dev-dependencies]
serde_yaml = "0.9"
uuid = { version = "1.18.0", features = ["v4"] }
tempfile = "3.13"
divan = "0.1"
env_logger.workspace = true

[[bench]]
name = "memory_storage"
harness = false
path = "../../benches/memory_storage.rs"

[[bench]]
name = "file_storage"
harness = false
path = "../../benches/file_storage.rs"

[[bench]]
name = "batching_baseline"
harness = false
path = "../../benches/batching_baseline.rs"
