[package]
name = "flashq"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "flashq"
path = "src/main.rs"

[dependencies]
flashq-storage = { path = "../flashq-storage" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true

[dev-dependencies]
uuid.workspace = true
tempfile.workspace = true
test-log.workspace = true
